[package]
name = "replication-game"
version = "0.1.0"
authors = ["nicola <nicola@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "replication-game-server"
path = "src/bin/server.rs"

[[bin]]
name = "replication-game"
path = "src/bin/game.rs"


[dependencies]
rocket = "0.4"
blake2 = "0.8.0"
hex = "0.3.2"
crypto-mac = "0.7.0"
filecoin-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
storage-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = "1.3"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2"
slog = "2.4"
rand = "0.4"
sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", branch = "master" }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
byteorder = "1.2.7"
memmap = "0.7.0"
tempfile = "3.0.5"

[dependencies.pairing]
version = "0.14.2"
features = ["expose-arith", "u128-support"]

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dev-dependencies]
parking_lot = "0.7.1"
lazy_static = "1.2.0"
