[package]
name = "replication-game"
version = "0.1.0"
authors = ["nicola <nicola@users.noreply.github.com>", "dignifiedquire <dignifiedquire@gmail.com"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "replication-game-server"
path = "src/bin/server.rs"

[[bin]]
name = "replication-game"
path = "src/bin/game.rs"


[dependencies]
rocket = "0.4"
blake2 = "0.8.0"
hex = "0.3.2"
crypto-mac = "0.7.0"
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = "1.3"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
slog = "2.4"
rand = "0.4"
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
byteorder = "1.2.7"
memmap = "0.7.0"
tempfile = "3.0.5"
flate2 = {version = "1.0.6", default-features = false, features = ["rust_backend"]}

[dependencies.filecoin-proofs]
git = "https://github.com/filecoin-project/rust-fil-proofs"
rev = "b429279195e08ecf3abd9879a3ef6f3b6fb2e21f"

[dependencies.storage-proofs]
git = "https://github.com/filecoin-project/rust-fil-proofs"
rev = "b429279195e08ecf3abd9879a3ef6f3b6fb2e21f"

[dependencies.sapling-crypto]
git = "https://github.com/filecoin-project/sapling-crypto"
branch = "master"

[dependencies.pairing]
git = "https://github.com/filecoin-project/pairing"
branch = "master"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]

[dev-dependencies]
parking_lot = "0.7.1"
lazy_static = "1.2.0"
