[package]
name = "replication-game"
version = "0.1.0"
authors = ["nicola <nicola@users.noreply.github.com>", "dignifiedquire <dignifiedquire@gmail.com"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "replication-game-server"
path = "src/bin/server.rs"

[[bin]]
name = "replication-game"
path = "src/bin/game.rs"


[dependencies]
rocket = "0.4"
blake2 = "0.8.0"
hex = "0.3.2"
crypto-mac = "0.7.0"
diesel = "1.3"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
slog = "2.4"
rand = "0.4"
byteorder = "1.2.7"
memmap = "0.7.0"
tempfile = "3.0.5"
flate2 = {version = "1.0.6", default-features = false, features = ["rust_backend"]}
paired = "0.15"

diesel_migrations = {version = "1.3", optional = true}
diesel-derive-enum = { version = "0.4.4", optional = true }

[dependencies.filecoin-proofs]
version = "0.3"
git = "https://github.com/filecoin-project/rust-fil-proofs"
branch = "master"

[dependencies.storage-proofs]
version = "0.3"
git = "https://github.com/filecoin-project/rust-fil-proofs"
branch = "master"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve"]

[dev-dependencies]
parking_lot = "0.7.1"
lazy_static = "1.2.0"

[features]
default = ["postgres"]
postgres = [
  "diesel/postgres",
  "diesel/r2d2",
  "diesel-derive-enum",
  "diesel-derive-enum/postgres",
  "diesel_migrations",
  "rocket_contrib/diesel_postgres_pool"
]
